Add DateTimeVar constructor.

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
       "sinon-chai": "^2.5.0"
    },
    "dependencies": {
-      "linalg-panthr": "*"
+      "linalg-panthr": "*",
+      "moment": "*"
    }
 }
