--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
    "scripts": {
       "test": "mocha --reporter=progress --recursive --require=./test/stackFixer.js",
       "lint": "eslint base",
-      "doc": "node ./node_modules/panthrdoc/run.js ."
+      "doc": "node ./node_modules/panthrdoc/run.js .",
+      "bundle": "browserify bundlePre.js -o bundle.js"
    },
    "repository": {
       "type": "git",
@@ -54,6 +55,7 @@
    "dependencies": {
       "panthrloader": "*",
       "linalg-panthr": "*",
-      "moment": "*"
+      "moment": "*",
+      "browserify": "*"
    }
 }
