--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
       "panthrloader": "*",
       "linalg-panthr": "*",
       "moment": "*",
+      "handlebars": "*",
       "browserify": "*"
    }
 }
