--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
   },
   "rules": {
      "quotes": [2, "single"],
-     "space-in-brackets": [2. "always"],
+     "object-curly-spacing": [2, "always"],
      "space-after-keywords": [2, "always"],
      "no-extra-parens": 2,
      "block-scoped-var": 2,
