--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
    "homepage": "https://github.com/PanthR/panthrBase",
    "devDependencies": {
       "chai": "^1.9.1",
-      "eslint": "^0.7.4",
+      "eslint": "*",
       "mocha": "~1.21.3",
       "panthrdoc": "*",
       "sinon": "^1.10.3",
