Add boilerplate for distributions.

--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
       "linalg-panthr": "*",
       "moment": "*",
       "handlebars": "*",
-      "browserify": "*"
+      "browserify": "*",
+      "panthrMath": "*",
+      "rgen": "*"
    }
 }
