Link to new panthr-math name

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
       "moment": "*",
       "handlebars": "*",
       "browserify": "*",
-      "panthrMath": "*",
+      "panthr-math": "*",
       "rgen": "*"
    }
 }
