Update unif/normal distributions to new panthrMath. Ref #113

--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
       "moment": "*",
       "handlebars": "*",
       "browserify": "*",
-      "panthr-math": "*",
-      "rgen": "*"
+      "panthr-math": "*"
    }
 }
