--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "main": "panthrBase.js",
    "scripts": {
       "test": "mocha --reporter=progress --recursive --require=./test/stackFixer.js",
-      "lint": "eslint base",
+      "lint": "eslint base -c .eslintrc",
       "doc": "node ./node_modules/panthrdoc/run.js .",
       "bundle": "browserify bundlePre.js | uglifyjs -c > toypages/bundle.js"
    },
